@@ -103,6 +103,7 @@ icons=AdjustWidth.png \
 	FindAgain.png \
 	FindInDir.png \
 	Find.png \
+	Floppy.png \
 	Help.png \
 	Home.png \
 	Minus.png \
